clean up this mess

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-clean
-corpus.txt
-corpus_analysis.csv
-full.txt
-full_analysis.csv
 imgs/
 .mypy_cache
-nkjp
-nkjp.txt
-oscar.txt
-problem.txt
-problem_analysis.csv
+nkjp/
+old/
+outputs/
 __pycache__
-scraped
+scraped/
